# opcua-client-gui

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  release.py  tests.py
uaclient/: application_certificate_dialog.py  applicationcertificate_ui.py  applicationcertificate_ui.ui  connection_dialog.py  connection_ui.py  connection_ui.ui  graphwidget.py  mainwindow.py  mainwindow_ui.py  mainwindow_ui.ui  uaclient.py
uaclient/theme/: breeze_resources.py
uawidgets/: attrs_widget.py  call_method_dialog.py  get_node_dialog.py  logger.py  new_node_dialogs.py  refs_widget.py  resources.py  tree_widget.py  utils.py
