[project]
name = "opcua-client"
version = "0.9.0"
description = "OPC-UA Client GUI"
authors = [{ name = "Olivier R-D" }]
license = { text = "GNU General Public License" }
requires-python = ">=3.14"
dependencies = [
    "asyncua>=1.2b2",
    "opcua-widgets>=0.7.0",
    "PyQt6",
    "pyqtgraph",
    "numpy",
]

[project.urls]
Repository = "https://github.com/FreeOpcUa/opcua-client-gui"

[project.scripts]
opcua-client = "uaclient.mainwindow:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uaclient", "uaclient.theme"]

[tool.uv.sources]
opcua-widgets = { path = "./uawidgets", editable = true }
asyncua = { path = "../opcua-asyncio", editable = true }
