[project]
name = "opcua-client"
version = "0.9.0"
description = "OPC-UA Client GUI"
authors = [{ name = "Olivier R-D" }]
license = { text = "GNU General Public License" }
requires-python = ">=3.14"
dependencies = [
    "asyncua>=2.0a0",
    "opcua-widgets>=0.7.0",
    "PyQt6",
    "pyqtgraph",
    "numpy",
]

[project.urls]
Repository = "https://github.com/FreeOpcUa/opcua-client-gui"

[project.scripts]
opcua-client = "uaclient.mainwindow:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uaclient", "uaclient.theme"]

[dependency-groups]
dev = ["mypy"]

[tool.uv.sources]
opcua-widgets = { path = "./uawidgets", editable = true }
asyncua = { path = "../opcua-asyncio", editable = true }

[tool.mypy]
python_version = "3.14"
strict = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
mypy_path = "./uawidgets"
exclude = "(^|/)(mainwindow_ui|connection_ui|applicationcertificate_ui|breeze_resources)\\.py$"

[[tool.mypy.overrides]]
module = ["asyncua.*", "pyqtgraph", "numpy"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "uaclient.mainwindow_ui",
    "uaclient.connection_ui",
    "uaclient.applicationcertificate_ui",
    "uaclient.theme.breeze_resources",
    "uawidgets.resources",
]
follow_imports = "skip"
