[project]
name = "opcua-client"
version = "1.0.0"
description = "OPC-UA Client GUI"
authors = [{ name = "Olivier R-D" }]
license = { text = "GNU General Public License" }
requires-python = ">=3.14"
dependencies = [
  "PyQt6",
  "asyncua>=2.0",
  "numpy",
  "pyqtgraph",
]

[project.urls]
Repository = "https://github.com/FreeOpcUa/opcua-client-gui"

[project.scripts]
opcua-client = "uaclient.mainwindow:main"

[dependency-groups]
dev = ["mypy"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.14"
strict = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
exclude = "(^|/)(mainwindow_ui|connection_ui|applicationcertificate_ui|breeze_resources|resources)\\.py$"

[[tool.mypy.overrides]]
module = ["asyncua.*", "pyqtgraph", "numpy"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "uaclient.mainwindow_ui",
  "uaclient.connection_ui",
  "uaclient.applicationcertificate_ui",
  "uaclient.theme.breeze_resources",
  "uawidgets.resources",
]
follow_imports = "skip"

[tool.setuptools]
packages = ["uaclient", "uaclient.theme", "uawidgets"]

[tool.setuptools.package-data]
uawidgets = ["py.typed"]
